syntax = "proto3";

package grpcmocker;

option go_package = "a.yandex-team.ru/cloud/mdb/internal/grpcutil/grpcmocker/testproto";

service TestService {
    rpc CreateObject(CreateObjectRequest) returns (CreateObjectResponse) {}
    rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {}
    rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {}
    rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse) {}
}

message Object {
    string id = 1;
    string name = 2;
    int32 number = 3;
}

message CreateObjectRequest {
    string id = 1;
}

message CreateObjectResponse {
    Object object = 1;
}

message GetObjectRequest {
    string id = 1;
}

message GetObjectResponse {
    Object object = 1;
}

message ListObjectsRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListObjectsResponse {
    repeated Object objects = 1;
}

message DeleteObjectRequest {
    string id = 1;
}

message DeleteObjectResponse {}
